--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -29,7 +29,7 @@
 				<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 			</p:confirmDialog>
 			<br />
-			<p:button value="#{message['button.novo']}" outcome="pretty:modulo-incluir" />
+			<p:button value="#{message['button.novo']}" outcome="pretty:cargaHoraria-incluir" />
 		</h:form>
 		
 	</ui:define>
