--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -10,20 +10,20 @@
 		<h2>#{message['title.cargos']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
-			<p:dataTable id="gridContatos" var="contato" value="#{contatoManager.listar()}" emptyMessage="#{message['alerta.listaVazia']}" >
-				<p:column width="100" headerText="Nome">
-					<h:outputText value="#{contato.nome}" />
+			<p:dataTable id="gridCargos" var="cargo" value="#{cargoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
+				<p:column width="200" headerText="#{message['label.nome']}">
+					<h:outputText value="#{cargo.nome}" />
 				</p:column>
-				<p:column width="200" headerText="Email">
-					<h:outputText value="#{contato.email}" />
+				<p:column width="200" headerText="#{message['label.data.inicio']}">
+					<h:outputText value="#{cargo.registroValidadeInicio}" />
 				</p:column>
 				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
-					<pretty:link mappingId="contato-editar">
-						<f:param value="#{contato.id}" />
+					<pretty:link mappingId="cargo-editar">
+						<f:param value="#{cargo.id}" />
 						<p:commandButton type="button" value="#{message['button.editar']}" />
 					</pretty:link>
-					<p:commandButton value="#{message['button.excluir']}" action="#{contatoManager.remove(contato.id)}" update="gridContatos">
-						<p:confirm header="Excluir Contato" message="Deseja mesmo excluir?" icon="ui-icon-alert" />	
+					<p:commandButton value="#{message['button.excluir']}" action="#{cargoManager.desativar(cargo.id)}" update="gridCargos">
+						<p:confirm header="Desativar Cargo" message="Deseja mesmo Desativar?" icon="ui-icon-alert" />	
 					</p:commandButton>
 				</p:column>
 			</p:dataTable>
@@ -32,7 +32,7 @@
 				<p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 			</p:confirmDialog>
 			<br />
-			<p:button value="#{message['button.novo']}" outcome="pretty:contato-incluir" />
+			<p:button value="#{message['button.novo']}" outcome="pretty:cargo-incluir" />
 		</h:form>
 		
 	</ui:define>
