--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -4,15 +4,16 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
-    	<h2>#{message['title.contatos']}</h2>
+    	<h2>#{message['title.cargos']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
-			<p:panel header="Cadastro Contato">
+			<p:panel header="#{message['title.cargo.cadastro']}">			
 				<p:outputLabel value="#{message['label.nome']} *" styleClass="label" />
-				<p:inputText value="#{contatoManager.contato.nome}" required="true" requiredMessage="Nome é obrigatório!" /><br /><br />
-				<p:outputLabel value="#{message['label.email']} *" styleClass="label" />
-				<p:inputText value="#{contatoManager.contato.email}" required="true" requiredMessage="E-mail é obrigatório!" /><br /><br />
-				<p:commandButton value="Salvar" action="#{contatoManager.save()}" update="growl" />
+				<p:inputText  value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" /><br /><br />
+				<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
+				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button"/>
+				
+				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />
 			</p:panel>
 		</h:form>
     </ui:define>
