--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -8,29 +8,38 @@
 
 	<ui:define name="content">
 		<h2>#{message['title.equipes']}</h2>
-		<p:growl id="growl" life="4000" globalOnly="true" sticky="true"/>
+		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
-			<p:dataTable id="gridEquipes" var="equipe" value="#{equipeManager.listarAtivo()}" emptyMessage="{message['alerta.listaVazia']}">
-				<p:column width="100" headerText="#{message['label.nome']}" >
+			<p:dataTable id="gridEquipes" var="equipe"
+				value="#{equipeManager.listarAtivo()}"
+				emptyMessage="{message['alerta.listaVazia']}">
+				<p:column width="100" headerText="#{message['label.nome']}">
 					<h:outputText value="#{equipe.nome}" />
 				</p:column>
-			<p:column headerText="#{message['label.acoes']}" styleClass="txtcenter">
-				<pretty:link mappingId="equipe-editar" >
-					<f:param value="#{equipe.idEquipe}" />
-					<p:commandButton type="button" value="#{message['button.editar']}" />
-				</pretty:link>
-				<h:commandButton value="#{message['button.desativar']}" action="#{equipeManager.desativar(equipe.idEquipe)}" update="gridEquipes">
-					<p:confirm header="Excluir Contato" message="Deseja mesmo excluir?" icon="ui-icon-alert"/>
-				</h:commandButton>
-			</p:column>
-			
+				<p:column headerText="#{message['label.acoes']}"
+					styleClass="txtcenter">
+					<pretty:link mappingId="equipe-editar">
+						<f:param value="#{equipe.idEquipe}" />
+						<p:commandButton type="button" value="#{message['button.editar']}" />
+					</pretty:link>
+					<h:commandButton value="#{message['button.desativar']}"
+						action="#{equipeManager.desativar(equipe.idEquipe)}"
+						update="gridEquipes">
+						<p:confirm header="Excluir Contato"
+							message="Deseja mesmo excluir?" icon="ui-icon-alert" />
+					</h:commandButton>
+				</p:column>
+
 			</p:dataTable>
 			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-				<p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon = "ui-icon-check" />
-				<p:commandButton value="Não" type="button" styleClass="ui-comfirmdialog-no" icon = "ui-icon-close" />	
+				<p:commandButton value="Sim" type="button"
+					styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+				<p:commandButton value="Não" type="button"
+					styleClass="ui-comfirmdialog-no" icon="ui-icon-close" />
 			</p:confirmDialog>
 			<br />
-			<p:button value="#{message['button.novo']}" outcome="pretty:equipe-incluir" />
+			<p:button value="#{message['button.novo']}"
+				outcome="pretty:equipe-incluir" />
 		</h:form>
 	</ui:define>
 </ui:composition>
