--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -7,7 +7,7 @@
     	<h2>#{message['title.equipes']}</h2>
     	<h:form>
 	    	<p:growl id="growl" life="4000" />
-	    	<p:panel header="#{message['title.equipe.cadastro']}">
+	    	<p:panel header="#{message['title.equipe.editar']}">
 	    		<p:outputLabel value="#{message['label.nome']} *" styleClass="label"/>
 	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/><br /><br />
 	    		<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
