Gabriel - Alterando idEquipe para id nas classes e xhtml

--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -24,7 +24,7 @@
 				<p:column headerText="#{message['label.acoes']}"
 					styleClass="txtcenter">
 					<pretty:link mappingId="equipe-editar">
-						<f:param value="#{equipe.idEquipe}" />
+						<f:param value="#{equipe.id}" />
 						<p:commandButton type="button" value="#{message['button.editar']}" />
 					</pretty:link>
 					<p:commandButton value="#{message['button.desativar']}"
