Gabriel - alterando idEquipe para id no xhtml

--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -28,7 +28,7 @@
 						<p:commandButton type="button" value="#{message['button.editar']}" />
 					</pretty:link>
 					<p:commandButton value="#{message['button.desativar']}"
-						action="#{equipeManager.desativar(equipe.idEquipe)}"
+						action="#{equipeManager.desativar(equipe.id)}"
 						update="gridEquipes">
 						<p:confirm header="Desativar Cargo"
 							message="Desaja mesmo Desativar?" icon="ui-icon-alert" />
