--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -8,10 +8,10 @@
         <h:form>
         	<p:growl id="growl" life="4000" />
 			<p:panel header="#{message['title.cargo.editar']}">
-				<p:outputLabel value="#{message['label.nome']}" styleClass="label" />
+				<p:outputLabel value="#{message['label.nome']} *" styleClass="label" />
 				<p:inputText value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" /><br /><br />
-				<p:outputLabel value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" validator="#{cargoManager.cargo.registroValidadeInicio}" showOn="button"/>
+				<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
+				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
 			</p:panel>
