--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -7,12 +7,13 @@
     	<h2>#{message['title.modulo']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
-			<p:panel header="#{message['title.modulo.editar']}">
-				<p:outputLabel value="#{message['label.nome']}" styleClass="label" />
-				<p:inputText value="#{moduloManager.modulo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" /><br /><br />
-				<p:outputLabel value="#{message['label.mapping']}" styleClass="label" />
-				<p:inputText value="#{moduloManager.modulo.mappingId}" required="true" requiredMessage="#{message['span.obrigatorio.mapping']}" /><br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{moduloManager.update()}" update="growl" />
+			<p:panel header="#{message['title.cargaHoraria.editar']}">			
+				
+				<p:outputLabel value="#{message['label.cargaHoraria']}" styleClass="label" for="cargaHoraria"/>
+				<p:inputMask id="cargaHoraria" value="#{cargaHorariaManager.cargaHoraria.cargaHoraria}" mask="99,99" converter="cargaHorariaConverter"/><br/><br/>
+				<p:outputLabel for="button" value="#{message['label.data.inicio']} *" />
+        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.registroValidadeInicio}" showOn="button" /><br/><br/>
+        		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.save()}" update="growl" />
 			</p:panel>
 		</h:form>
     </ui:define>
