--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -13,7 +13,7 @@
 			<p:dataTable id="gridCargaHoraria" var="cargaHoraria" value="#{cargaHorariaManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
 				<p:column width="100" headerText="#{message['label.cargaHoraria']}" for="cargaHoraria">
 					<h:outputText id="cargaHoraria" value="#{cargaHoraria.cargaHoraria}">
-						<f:convertNumber pattern="#0.00" />
+						<f:converter converterId="cargaHorariaConverter"/>
 					</h:outputText>
 				</p:column>
 				<p:column width="100" headerText="#{message['label.data.inicio']}">
