Gabriel - Ajustatando metodo Desativar  de EquipeService, ajustando layout dos xhtml de equipe

--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -39,7 +39,7 @@
 				<p:commandButton value="Sim" type="button"
 					styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
 				<p:commandButton value="Não" type="button"
-					styleClass="ui-comfirmdialog-no" icon="ui-icon-close" />
+					styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 			</p:confirmDialog>
 			<br />
 			<p:button value="#{message['button.novo']}"
