--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -11,7 +11,7 @@
 	    		<p:outputLabel value="#{message['label.nome']} *" styleClass="label"/>
 	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/><br /><br />
 	    		<p:outputLabel value="#{message['label.data.inicio']}" styleClass="label" />
-	    		<p:outputLabel value="#{equipeManager.equipe.registroValidadeInicio}" styleClass="label"/><br/> <br /> <br />
+	    		<p:outputLabel value="#{equipeManager.equipe.registroValidadeInicio}" styleClass="label"> <f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/></p:outputLabel><br/> <br />
 	    		<p:outputLabel value="#{message['label.data.final']}" styleClass="label"/>
 	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeFim}" showOn="button"/><br /><br />
 	    		<p:outputLabel value="Digite a nova data de inicio *" styleClass="label"/>
