--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -9,9 +9,18 @@
         	<p:growl id="growl" life="4000" />
 			<p:panel header="#{message['title.cargo.editar']}">
 				<p:outputLabel value="#{message['label.nome']} *" styleClass="label" />
-				<p:inputText value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" /><br /><br />
+				<p:inputText value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
+				<br /><br />
+				<p:outputLabel value="#{message['label.data.inicio']}" styleClass="label" />
+				<h:outputText value="#{cargoManager.cargo.registroValidadeInicio}">
+					<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
+				</h:outputText>	
+				<br /><br />
+				<p:outputLabel value="#{message['label.data.final']} *" styleClass="label" />
+				<p:calendar id="buttonFim" value="#{cargoManager.cargo.dataManipulacaoFim}" showOn="button"/>
+				<br /><br />
 				<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
-				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button"/>
+				<p:calendar id="buttonIni" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button"/>				
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
 			</p:panel>
