--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -12,8 +12,8 @@
 				<p:outputLabel value="#{message['label.cargaHoraria']}" styleClass="label" for="cargaHoraria"/>
 				<p:inputMask id="cargaHoraria" value="#{cargaHorariaManager.cargaHoraria.cargaHoraria}" mask="99,99" converter="cargaHorariaConverter"/><br/><br/>
 				<p:outputLabel for="button" value="#{message['label.data.inicio']} *" styleClass="label"/>
-        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.registroValidadeInicio}" showOn="button" /><br/><br/>
-        		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.save()}" update="growl" />
+        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.dataManipulacaoFim}" showOn="button" /><br/><br/>
+        		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" />
 			</p:panel>
 		</h:form>
     </ui:define>
