--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -14,6 +14,9 @@
 				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />
+				<h:link outcome="pretty:cargo-listar">
+					<p:commandButton  value="#{message['button.cancelar']}" update="growl" />
+				</h:link>
 			</p:panel>
 		</h:form>
     </ui:define>
