--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -13,6 +13,7 @@
 	    		<p:outputLabel value="Digite a nova data de inicio *" styleClass="label"/>
 	    		<p:calendar id="button" value="#{equipeManager.equipe.dataManipulacao}" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br /><br />
 	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" />
+	    	<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
 	    	</p:panel>
     	</h:form>
     
