Marcus - Ciando bottun Cancelar

--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -13,10 +13,9 @@
 				<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
 				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
 				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />
-				<h:link outcome="pretty:cargo-listar">
-					<p:commandButton  value="#{message['button.cancelar']}" update="growl" />
-				</h:link>
+				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />				
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
+				
 			</p:panel>
 		</h:form>
     </ui:define>
