--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -14,6 +14,7 @@
 				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label"/>
         		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.dataManipulacaoFim}" showOn="button"  required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br/><br/>
         		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" />
+        		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
 			</p:panel>
 		</h:form>
     </ui:define>
