--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -11,8 +11,8 @@
 				
 				<p:outputLabel value="#{message['label.cargaHoraria']}" styleClass="label" for="cargaHoraria"/>
 				<p:inputMask id="cargaHoraria" value="#{cargaHorariaManager.cargaHoraria.cargaHoraria}" mask="99,99" converter="cargaHorariaConverter" required="true" requiredMessage="#{message['span.obrigatorio.cargaHoraria']}"/><br/><br/>
-				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label"/>
-        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.dataManipulacaoFim}" showOn="button"  required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br/><br/>
+				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
+        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.dataManipulacaoFim}" pattern="dd/MM/yyyy" showOn="button"  required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br/><br/>
         		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" />
         		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
 			</p:panel>
