--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -11,10 +11,10 @@
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
 			<p:dataTable id="gridCargos" var="cargo" value="#{cargoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
-				<p:column width="200" headerText="#{message['label.nome']}">
+				<p:column width="200" headerText="#{message['label.nome']}" sortBy="#{cargo.nome}">
 					<h:outputText value="#{cargo.nome}" />
 				</p:column>
-				<p:column width="200" headerText="#{message['label.data.inicio']}">
+				<p:column width="200" headerText="#{message['label.data.inicio']}" sortBy="#{cargo.registroValidadeInicio}">
 					<h:outputText value="#{cargo.registroValidadeInicio}">
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
 					</h:outputText>					
