--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -12,7 +12,7 @@
 				<p:inputText value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel value="#{message['label.data.inicio']} *" styleClass="label" />
-				<p:calendar id="buttonIni" value="#{cargoManager.cargo.dataManipulacao}" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>				
+				<p:calendar id="buttonIni" value="#{cargoManager.cargo.dataManipulacao}" pattern="dd/MM/yyyy" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>				
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
