--- a/src/main/webapp/pages/perfil/perfil-incluir.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-incluir.xhtml
@@ -1,19 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:composite="http://java.sun.com/jsf/composite"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
-<head>
-<title>Not present in rendered output</title>
-</head>
-<body>
-<composite:interface>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:p="http://primefaces.org/ui"
+    template="/pages/template/default.xhtml"
+    xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
-</composite:interface>
-<composite:implementation>
-
-</composite:implementation>
-</body>
-</html>
+    <ui:define name="content">
+    	<h2>#{message['title.perfis']}</h2>
+    	<h:form>
+	    	<p:growl id="growl" life="4000" />
+	    	<p:panel header="#{message['title.perfil.cadastro']}">
+	    		<p:outputLabel value="#{message['label.nome']} *" styleClass="label"/>
+	    		<p:inputText value="#{perfilManager.perfil.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/><br /><br />
+	    		<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+	    		<p:calendar id="button" value="#{perfilManager.perfil.registroValidadeInicio}" pattern="dd/MM/yyyy" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br /><br/>
+	    	
+	    		<p:commandButton value="#{message['button.salvar']}" action="#{perfilManager.save()}" update="growl" />
+	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:perfil"></p:button>
+	    	</p:panel>
+    	</h:form>
+    
+    </ui:define>
+</ui:composition>
