--- a/src/main/webapp/pages/perfil/perfil-listar.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-listar.xhtml
@@ -1,19 +1,49 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:composite="http://java.sun.com/jsf/composite"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
-<head>
-<title>Not present in rendered output</title>
-</head>
-<body>
-<composite:interface>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	template="/pages/template/default.xhtml"
+	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
-</composite:interface>
-<composite:implementation>
-
-</composite:implementation>
-</body>
-</html>
+	<ui:define name="content">
+		<h2>#{message['title.perfis']}</h2>
+		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
+		<h:form>
+			<p:dataTable id="gridPerfis" var="perfil"
+				value="#{perfilManager.listarAtivos()}"
+				emptyMessage="#{message['alerta.listaVazia']}">
+				<p:column width="200" headerText="#{message['label.nome']}">
+					<h:outputText value="#{perfil.nome}" />
+				</p:column>
+				<p:column width="200" headerText="#{message['label.data.inicio']}">
+					<h:outputText value="#{perfil.registroValidadeInicio}" >
+					<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
+					</h:outputText>
+				</p:column>
+				<p:column headerText="#{message['label.acoes']}"
+					styleClass="txtcenter">
+					<pretty:link mappingId="perfil-editar">
+						<f:param value="#{perfil.id}" />
+						<p:commandButton type="button" value="#{message['button.editar']}" />
+					</pretty:link>
+					<p:commandButton value="#{message['button.desativar']}"
+						action="#{perfilManager.desativar(perfil.id)}"
+						update="gridPerfis">
+						<p:confirm header="Desativar Perfil"
+							message="Desaja mesmo Desativar?" icon="ui-icon-alert" />
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
+			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+				<p:commandButton value="Sim" type="button"
+					styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+				<p:commandButton value="Não" type="button"
+					styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+			</p:confirmDialog>
+			<br />
+			<p:button value="#{message['button.novo']}"
+				outcome="pretty:perfil-incluir" />
+		</h:form>
+	</ui:define>
+</ui:composition>
