Mateus - Refatorado Primefaces

--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-listar.xhtml
@@ -21,7 +21,7 @@
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
 					</h:outputText>
 				</p:column>
-				<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
+				<p:column width="100" headerText="#{message['label.acoes']}" styleClass="txtCenter">
 					<pretty:link mappingId="cargaHoraria-editar">
 						<f:param value="#{cargaHoraria.id}" />
 						<p:commandButton type="button" value="#{message['button.editar']}" />
