--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -12,7 +12,7 @@
 				<p:inputText id="nome" value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" pattern="dd/MM/yyyy" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
+				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />				
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
