--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -7,7 +7,8 @@
     	<h2>#{message['title.cargos']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
-			<p:panel header="#{message['title.cargo.cadastro']}">			
+			<p:panel header="#{message['title.cargo.cadastro']}" id="painel">	
+				<p:focus context="painel"/>		
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
