Marcus - Refatorando caminho dos titulos das propites

--- a/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
@@ -4,10 +4,10 @@
     xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <ui:define name="content">
-    	<h2>#{message['title.modulo']}</h2>
+    	<h2>#{message['title.formaContratacao']}</h2>
         <h:form>
         	<p:growl id="growl" life="4000" />
-			<p:panel header="#{message['title.cargaHoraria.editar']}" id="painel">	
+			<p:panel header="#{message['title.formaContratacao.editar']}" id="painel">	
 					
 				<p:focus context="painel"/>		
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
