--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -7,7 +7,7 @@
 	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
 	<ui:define name="content">
-		<h2>#{message['title.cargaHoraria']}</h2>
+		<h2>#{message['title.formaContratacao']}</h2>
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 		<h:form>
 			<p:dataTable id="gridFormaContratacao" var="formaContratacao" value="#{formaContratacaoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
