--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-incluir.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-incluir.xhtml
@@ -12,7 +12,7 @@
 				<p:outputLabel value="#{message['label.cargaHoraria']}" styleClass="label" for="cargaHoraria"/>
 				<p:inputMask id="cargaHoraria" value="#{cargaHorariaManager.cargaHoraria.cargaHoraria}" mask="99,99" converter="cargaHorariaConverter" required="true" requiredMessage="#{message['span.obrigatorio.cargaHoraria']}"/><br/><br/>
 				<p:outputLabel for="calendario" value="#{message['label.data.inicio']}" styleClass="label"/>
-        		<p:calendar id="calendario" value="#{cargaHorariaManager.cargaHoraria.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br/><br/>
+        		<p:calendar id="calendario" value="#{cargaHorariaManager.cargaHoraria.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br/><br/>
         		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.save()}" update="growl" />
         		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
 			</p:panel>
