--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -13,7 +13,7 @@
 				<p:inputText id="nome" value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
-				<p:calendar id="button" value="#{cargoManager.cargo.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>				
+				<p:calendar id="button" value="#{cargoManager.cargo.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>				
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
