--- a/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
@@ -14,7 +14,7 @@
 				<p:inputText id="nome" value="#{formaContratacaoManager.formaContratacao.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" value="#{formaContratacaoManager.formaContratacao.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
+				<p:calendar id="button" value="#{formaContratacaoManager.formaContratacao.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.save()}" update="growl" />				
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:formaContratacao"/>
